Remove maths from title.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.5 2009/07/28 20:26:32 ith Exp $
+% $Id: mainintro.tex,v 1.6 2009/07/29 13:22:31 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.5 2009/07/28 20:26:32 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.6 2009/07/29 13:22:31 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -28,7 +28,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Non-gaussianity and $\fnl$}
+\section{Non-gaussianity}
 \label{sec:fnl-intro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
