--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.19 2009/07/28 20:26:39 ith Exp $
+% $Id: thesis.tex,v 1.20 2009/07/29 13:22:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
-%twoside,
+% twoside,
 12pt,
 bibtotoc, % Include bibliography in contents
 liststotoc, % Include lists of figures and tables in contents
@@ -21,11 +21,11 @@ onehalfspacing % onehalfspacing or doublespacing
 \usepackage[CVSon, % CVS version in footers
             labels, % show labels
 	    todos, % show todos
-            hyperref % Use hyperref for links
+            %hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.19 2009/07/28 20:26:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.20 2009/07/29 13:22:56 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -38,8 +38,8 @@ mainintro,
 dbi/dbi-intro,
 dbi/dbi,
 dbi/multibrane,
-% numerical/numerical,
-% theend
+numerical/numerical,
+theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
@@ -99,7 +99,7 @@ dbi/multibrane,
 \include{theend}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-
+\listoftodos
 % \end{doublespace}
 \begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
