Change around some refs and change WMAP3 to 5.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.14 2009/07/29 10:33:54 ith Exp $
+% $Id: dbi-intro.tex,v 1.15 2009/07/29 13:33:23 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.14 2009/07/29 10:33:54 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.15 2009/07/29 13:33:23 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -27,8 +27,8 @@
 The inflationary scenario provides the 
 theoretical framework for the early history 
 of the universe. It has now been successfully tested by observations, 
-including the third year data from the Wilkinson Microwave Anisotropy 
-Probe (WMAP3) \cite{spergel}. Despite this success, however, the high energy 
+including the five year data from the Wilkinson Microwave Anisotropy 
+Probe (WMAP5) \cite{Komatsu:2008hk}. Despite this success, however, the high energy 
 physics that resulted in a phase of accelerated expansion is still 
 not well understood. String/M-theory unifies the fundamental interactions 
 including gravity and it is natural and important to 
@@ -43,42 +43,49 @@ brane6,brane7,brane8,brane9,brane10,brane11,brane12,brane13,
 brane14,brane15,brane16,brane17,Brodie:2003qv,Vikman:2006hk, 
 Mukhanov:2005bu,Kallosh:2007wm,brane18,
 brane19,brane20,brane21}. 
-(For recent reviews, see, e.g., \cite{tyereview,cline}). 
+(For recent reviews, see, e.g., \cite{tyereview,cline,McAllister:2007bg,Lorenz:2007ze,
+Bean:2007eh,bean}). 
 Of particular interest 
-is the DBI inflationary scenario \cite{brane6,brane11}. 
+is the Dirac-Born-Infeld (DBI) inflationary scenario \cite{brane6,brane11}. 
 This is based on the compactification of type IIB string theory on a 
 Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
 warped regions known as `throats'.  The propagation of a 
 ${\rm D3}$-brane in such a region can drive inflation, where the inflaton 
 field is identified with the radial position of the brane 
 along the throat. Since this is an open string mode, the field 
-equation for the inflaton is determined by a Dirac-Born-Infeld (DBI) action. 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-% ========================================================= %
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-% Intro from multibrane paper, fold back into dbi-intro chapter.
-\addtodo{ Put next section back into introduction above.}
-The quest to realise inflation within string/M-theory continues to 
-attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
-of the compactified type IIB theory is a well-motivated model, 
-in which inflation is driven by one or more ${\rm D}$-branes 
-propagating in a warped `throat' background
-\cite{brane1,brane11,brane12,brane13, brane2,brane20,brane3, brane4,brane5,brane6}
-. Such a background is generated 
-by the non-trivial form-field fluxes over the internal dimensions. 
-(For recent reviews, see
-\cite{tyereview,McAllister:2007bg,Lorenz:2007ze,Kallosh:2007wm,Bean:2007eh,bean,
-cline}.) 
-In the simplest version of the scenario, 
-the inflaton parametrizes the radial 
-position in the throat of a single ${\rm D3}$-brane. 
+equation for the inflaton is determined by a DBI action.
+% 
 The brane dynamics are determined by the DBI action in such a 
 way that the inflaton's kinetic energy is bounded from above by the warped 
 brane tension. The regime where this bound is nearly saturated is 
 known as the `relativistic' limit.
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% ========================================================= %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+% Intro from multibrane paper, removed but could be useful.
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% The quest to realise inflation within string/M-theory continues to 
+% attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
+% of the compactified type IIB theory is a well-motivated model, 
+% in which inflation is driven by one or more ${\rm D}$-branes 
+% propagating in a warped `throat' background
+% \cite{brane1,brane11,brane12,brane13, brane2,brane20,brane3, brane4,brane5,brane6}
+% . Such a background is generated 
+% by the non-trivial form-field fluxes over the internal dimensions. 
+% (For recent reviews, see
+% \cite{tyereview,McAllister:2007bg,Lorenz:2007ze,Kallosh:2007wm,Bean:2007eh,bean,
+% cline}.) 
+% In the simplest version of the scenario, 
+% the inflaton parametrizes the radial 
+% position in the throat of a single ${\rm D3}$-brane. 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-The purpose of Chapters \ref{ch:dbi-intro}, \ref{ch:dbi} and \ref{ch:multibrane} is to 
+
+
+
+
+In Chapters \ref{ch:dbi-intro}, \ref{ch:dbi} and \ref{ch:multibrane} we will 
 explore the observational consequences of DBI inflation. 
 In general, primordial gravitational wave fluctuations
 and non-Gaussian statistics in the curvature perturbation provide 
@@ -89,11 +96,6 @@ light. This induces a large and potentially detectable non-Gaussian
 signal in the density perturbations \cite{brane6,brane11,lidser3,chenetal}. 
 
 
-
-
-
-
-\addtodo{ Change to chapter structure.}
 In this chapter we introduce non-canonical inflation and DBI inflation.
 In Chapter \ref{ch:dbi} we derive upper and lower 
 limits on the amplitude of the tensor perturbations in Sections \ref{sec:upper-dbi} and  
