Change to WMAP5 citation.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.16 2009/07/29 14:01:17 ith Exp $
+% $Id: dbi-intro.tex,v 1.17 2009/07/29 15:05:12 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.16 2009/07/29 14:01:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.17 2009/07/29 15:05:12 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -182,7 +182,7 @@ r\equiv \frac{\Pt}{\Ps} = 16c_s \epsilon_H \,.
 The WMAP5 normalization of the CMB power spectrum 
 implies that $\Ps= 2.5\times10^{-9}$ and 
 the experimental upper bound on the tensor-scalar 
-ratio is $r <0.55$ \cite{spergel}.
+ratio is $r <0.55$ \cite{Komatsu:2008hk}.
 \addtodo{Change to r<0.20 for no-running or r<0.54 for running (WMAP5+BAO+SN).
 Does this change any later calculations?}
 
