--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.20 2009/07/29 13:22:56 ith Exp $
+% $Id: thesis.tex,v 1.21 2009/07/29 15:05:24 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 % twoside,
@@ -21,25 +21,25 @@ onehalfspacing % onehalfspacing or doublespacing
 \usepackage[CVSon, % CVS version in footers
             labels, % show labels
 	    todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.20 2009/07/29 13:22:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.21 2009/07/29 15:05:24 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
 \includeonly{
-abstract,
-acknowledgements,
-mainintro,
+% abstract,
+% acknowledgements,
+% mainintro,
 dbi/dbi-intro,
 dbi/dbi,
-dbi/multibrane,
-numerical/numerical,
-theend
+% dbi/multibrane,
+% numerical/numerical,
+% theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
@@ -99,7 +99,7 @@ theend
 \include{theend}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-\listoftodos
+% \listoftodos
 % \end{doublespace}
 \begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
